@@ -31,6 +31,7 @@
 * Elma now saves State.dat when you change options
 * You can now f1-p in editor (same as f1-enter but in editor)
 * You can now change what LGR to use as the default from inside the options menu
+* Replays recorded with f1-enter are now saved into renders/rec_filename folder instead of the root
 
 ## Minor Bug Fixes
 * Enforce lowercase LGR filenames to fix loading issues on case-sensitive filesystems
